feat: New Feedback Assistant

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -148,6 +148,12 @@
     "“喵哩喵哩”新功能" : {
 
     },
+    "[Hex Data]" : {
+
+    },
+    "[Privacy Hidden]" : {
+
+    },
     "%@" : {
       "localizations" : {
         "en" : {
@@ -368,6 +374,16 @@
         }
       }
     },
+    "%@：反馈暂未被阅读，或是正在验证问题。\n\n%@：报告中描述的是预期中的表现。\n\n%@：报告中的问题无法被修复，或是不具有可行性。\n\n%@：在你提交此报告前，已有另一人提出了相同的问题，你仍会在第一个报告得到修复后收到“已修复”的状态更新。\n        你的报告可能会与那些初看似乎具有相同根源的类似报告分到一组。但是，类似的报告也可能包含多种原因。如果你发现该修复方案解决了类似报告中的问题，但无法完全解决你报告的问题，请提交新报告。\n\n%@：短时间内可能无法解决此问题。\n\n%@：Darock 正在为此问题提供修复方案。\n\n%@：修复工作已完成，但还未提交更新或是更新正在等待发布。\n\n%@：修复工作已完成，可更新至最新版本验证修复。\n\n%@：报告与 App 本身无关，或是问题并非由 App 本身引起。\n\n%@：未能通过报告中的问题复现问题，需要提供更多信息。\n\n%@：提供的信息不足以让我们确定问题，你需要补充更多信息。" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@：反馈暂未被阅读，或是正在验证问题。\n\n%2$@：报告中描述的是预期中的表现。\n\n%3$@：报告中的问题无法被修复，或是不具有可行性。\n\n%4$@：在你提交此报告前，已有另一人提出了相同的问题，你仍会在第一个报告得到修复后收到“已修复”的状态更新。\n        你的报告可能会与那些初看似乎具有相同根源的类似报告分到一组。但是，类似的报告也可能包含多种原因。如果你发现该修复方案解决了类似报告中的问题，但无法完全解决你报告的问题，请提交新报告。\n\n%5$@：短时间内可能无法解决此问题。\n\n%6$@：Darock 正在为此问题提供修复方案。\n\n%7$@：修复工作已完成，但还未提交更新或是更新正在等待发布。\n\n%8$@：修复工作已完成，可更新至最新版本验证修复。\n\n%9$@：报告与 App 本身无关，或是问题并非由 App 本身引起。\n\n%10$@：未能通过报告中的问题复现问题，需要提供更多信息。\n\n%11$@：提供的信息不足以让我们确定问题，你需要补充更多信息。"
+          }
+        }
+      }
+    },
     "%@(%@)" : {
       "localizations" : {
         "zh-Hans" : {
@@ -407,6 +423,30 @@
         }
       }
     },
+    "%@已修复" : {
+
+    },
+    "%@已在未来版本修复" : {
+
+    },
+    "%@按预期工作" : {
+
+    },
+    "%@搁置" : {
+
+    },
+    "%@无法修复" : {
+
+    },
+    "%@未标记" : {
+
+    },
+    "%@未能复现" : {
+
+    },
+    "%@正在修复" : {
+
+    },
     "%@粉丝" : {
       "localizations" : {
         "en" : {
@@ -416,6 +456,15 @@
           }
         }
       }
+    },
+    "%@问题并不与 App 相关" : {
+
+    },
+    "%@问题重复" : {
+
+    },
+    "%@需要更多细节" : {
+
     },
     "%lld / %lld" : {
       "localizations" : {
@@ -1884,6 +1933,9 @@
         }
       }
     },
+    "App 版本" : {
+
+    },
     "Bangumi" : {
       "localizations" : {
         "en" : {
@@ -2185,6 +2237,7 @@
       }
     },
     "Darock 会收集必要的诊断信息以便进行改进。如果您不愿意被收集信息，请勿发送。" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -3153,6 +3206,16 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "App在%@出現問題。"
+          }
+        }
+      }
+    },
+    "FB%@%@" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "FB%1$@%2$@"
           }
         }
       }
@@ -7967,6 +8030,12 @@
         }
       }
     },
+    "与此反馈重复" : {
+
+    },
+    "了解反馈状态" : {
+
+    },
     "二维码名片" : {
       "localizations" : {
         "en" : {
@@ -8057,6 +8126,9 @@
         }
       }
     },
+    "你要存储当前的草稿吗？" : {
+
+    },
     "使用“相机”App" : {
       "localizations" : {
         "en" : {
@@ -8129,6 +8201,9 @@
         }
       }
     },
+    "关联反馈" : {
+
+    },
     "内容" : {
       "localizations" : {
         "en" : {
@@ -8167,6 +8242,9 @@
           }
         }
       }
+    },
+    "删除草稿" : {
+
     },
     "加载更多" : {
       "localizations" : {
@@ -8292,6 +8370,9 @@
         }
       }
     },
+    "反馈状态" : {
+
+    },
     "反馈类型" : {
       "localizations" : {
         "en" : {
@@ -8325,6 +8406,7 @@
       }
     },
     "发送" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -8509,7 +8591,11 @@
         }
       }
     },
+    "回复" : {
+
+    },
     "回复 %lld" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -8530,6 +8616,7 @@
       }
     },
     "回复内容" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -8677,6 +8764,9 @@
           }
         }
       }
+    },
+    "存储草稿" : {
+
     },
     "完成" : {
       "localizations" : {
@@ -8952,6 +9042,9 @@
         }
       }
     },
+    "换行" : {
+
+    },
     "推荐" : {
       "localizations" : {
         "en" : {
@@ -8993,6 +9086,21 @@
           }
         }
       }
+    },
+    "描述" : {
+
+    },
+    "描述行%lld" : {
+
+    },
+    "提交" : {
+
+    },
+    "提交反馈" : {
+
+    },
+    "提交反馈前，请先检查常见问题" : {
+
     },
     "搜索" : {
       "localizations" : {
@@ -9195,7 +9303,11 @@
         }
       }
     },
+    "未完成的编辑" : {
+
+    },
     "来自" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -9325,6 +9437,9 @@
         }
       }
     },
+    "此反馈已关闭，若要重新进行反馈，请创建一个新的反馈" : {
+
+    },
     "清除历史记录" : {
       "localizations" : {
         "en" : {
@@ -9429,6 +9544,9 @@
         }
       }
     },
+    "示例：评论区缺少最新的回复" : {
+
+    },
     "离线缓存" : {
       "localizations" : {
         "en" : {
@@ -9496,6 +9614,7 @@
       }
     },
     "简洁地描述问题" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -9524,6 +9643,9 @@
           }
         }
       }
+    },
+    "系统版本" : {
+
     },
     "经验" : {
       "localizations" : {
@@ -9701,6 +9823,12 @@
         }
       }
     },
+    "请为你的反馈提供描述性的标题：" : {
+
+    },
+    "请包括：\n- 问题的清晰描述\n- 逐步说明重现问题的详细步骤（如果可能）\n- 期望的结果\n- 当前所示结果" : {
+
+    },
     "请将恢复密钥保存到安全的位置" : {
       "localizations" : {
         "en" : {
@@ -9710,6 +9838,9 @@
           }
         }
       }
+    },
+    "请描述该问题以及重现问题的步骤：" : {
+
     },
     "调试构建" : {
       "localizations" : {
@@ -9836,6 +9967,9 @@
           }
         }
       }
+    },
+    "通知令牌" : {
+
     },
     "重新载入" : {
       "localizations" : {
