chore: remove if available macros

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -521,24 +521,6 @@
         }
       }
     },
-    "🎂" : {
-
-    },
-    "🎉" : {
-
-    },
-    "🎉🎉🎉\n今天是 Darock 周年庆\n到我们群 248036605 参加活动吧！" : {
-
-    },
-    "🤡" : {
-
-    },
-    "🤡\n愚人节快乐！" : {
-
-    },
-    "🧨" : {
-
-    },
     "1.5x" : {
 
     },
@@ -1037,6 +1019,7 @@
       }
     },
     "Account.info" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -1736,9 +1719,6 @@
 
     },
     "Darock 建议您保持更新最新版本系统" : {
-
-    },
-    "Darock 祝您新年快乐！" : {
 
     },
     "Darock-studio" : {
@@ -7870,6 +7850,7 @@
       }
     },
     "Video.details.watching-people.%@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "ja" : {
           "stringUnit" : {
@@ -8146,9 +8127,6 @@
         }
       }
     },
-    "上一小时" : {
-
-    },
     "下一步" : {
 
     },
@@ -8190,9 +8168,6 @@
         }
       }
     },
-    "今天" : {
-
-    },
     "从关注列表中移除" : {
 
     },
@@ -8217,9 +8192,6 @@
           }
         }
       }
-    },
-    "使用“相机”App" : {
-
     },
     "使用恢复密钥" : {
 
@@ -8272,9 +8244,6 @@
 
     },
     "列表视图" : {
-
-    },
-    "加群248036605查看群公告以申请解封" : {
 
     },
     "动态" : {
@@ -8510,16 +8479,6 @@
         }
       }
     },
-    "喵哩喵哩\n调试构建。 Build %@.xc_verd.%lld" : {
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "喵哩喵哩\n调试构建。 Build %1$@.xc_verd.%2$lld"
-          }
-        }
-      }
-    },
     "喵哩喵哩 (%@)" : {
 
     },
@@ -8535,9 +8494,6 @@
     "回复 %lld" : {
 
     },
-    "回复信息" : {
-
-    },
     "回复内容" : {
 
     },
@@ -8545,6 +8501,7 @@
 
     },
     "在iPhone上继续" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -8840,9 +8797,6 @@
         }
       }
     },
-    "您已被 Darock 永久封禁且在设备上施行" : {
-
-    },
     "您的 Apple Watch 运行的 watchOS 已过时，喵哩喵哩已在 2024/6/10 停止支持" : {
 
     },
@@ -8868,10 +8822,8 @@
         }
       }
     },
-    "所有历史记录" : {
-
-    },
     "手记建议" : {
+      "extractionState" : "stale",
       "localizations" : {
         "zh-Hant" : {
           "stringUnit" : {
@@ -8958,9 +8910,6 @@
       }
     },
     "新建反馈" : {
-
-    },
-    "昨天和今天" : {
 
     },
     "显示底部弹幕" : {
@@ -9140,12 +9089,6 @@
     "正常" : {
 
     },
-    "注意！重装 App 并不会移除封禁且可能会导致识别 ID 更改，我们将无法为您解封" : {
-
-    },
-    "清除历史记录" : {
-
-    },
     "清除所有已观看视频" : {
       "localizations" : {
         "en" : {
@@ -9168,9 +9111,6 @@
         }
       }
     },
-    "清除时间段" : {
-
-    },
     "清除缓存" : {
 
     },
@@ -9178,9 +9118,6 @@
 
     },
     "状态" : {
-
-    },
-    "生日快乐，%@！" : {
 
     },
     "画面" : {
@@ -9404,9 +9341,6 @@
       }
     },
     "请将恢复密钥保存到安全的位置" : {
-
-    },
-    "请求在线支持 (Beta)" : {
 
     },
     "调试构建" : {
