fix: Player zoom button not work

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -9679,6 +9679,9 @@
         }
       }
     },
+    "虽然我们无法一一以文字回复提交的每一份反馈，但我们会查看每一份反馈并监控提交的反馈数量，以便更好地了解问题的范围。" : {
+
+    },
     "行为" : {
       "localizations" : {
         "en" : {
