fix: Video Detail Crash

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8152,6 +8152,9 @@
         }
       }
     },
+    "允许后台播放" : {
+
+    },
     "允许收集使用信息" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -8691,9 +8694,6 @@
         }
       }
     },
-    "声音外放" : {
-
-    },
     "大" : {
       "localizations" : {
         "en" : {
@@ -9022,6 +9022,9 @@
           }
         }
       }
+    },
+    "手记建议" : {
+
     },
     "扩展的触感反馈" : {
       "localizations" : {
@@ -9685,6 +9688,9 @@
           }
         }
       }
+    },
+    "若要在后台播放，你需要在播放前连接蓝牙音频设备。" : {
+
     },
     "虽然我们无法一一以文字回复提交的每一份反馈，但我们会查看每一份反馈并监控提交的反馈数量，以便更好地了解问题的范围。" : {
 
