fix: Video Detail Crash

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4733,6 +4733,7 @@
       }
     },
     "Home.update.%@.%@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -9327,6 +9328,9 @@
         }
       }
     },
+    "允许后台播放" : {
+
+    },
     "允许收集使用信息" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -10794,6 +10798,9 @@
         }
       }
     },
+    "版本 %@ 现已可用" : {
+
+    },
     "状态" : {
       "localizations" : {
         "en" : {
@@ -10994,6 +11001,9 @@
           }
         }
       }
+    },
+    "若要在后台播放，你需要在播放前连接蓝牙音频设备。" : {
+
     },
     "虽然我们无法一一以文字回复提交的每一份反馈，但我们会查看每一份反馈并监控提交的反馈数量，以便更好地了解问题的范围。" : {
       "localizations" : {
