opt: Optimized Search View

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -9432,6 +9432,7 @@
       }
     },
     "加载更多" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -10366,6 +10367,9 @@
           }
         }
       }
+    },
+    "搜索 - %@" : {
+
     },
     "播放" : {
       "localizations" : {
