fix: Parted video may throw invalid request error

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -8995,6 +8995,7 @@
       }
     },
     "Video.more" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
