--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -3356,6 +3356,9 @@
         }
       }
     },
+    "DannyFeng" : {
+
+    },
     "Darock Studio" : {
       "localizations" : {
         "en" : {
@@ -9250,6 +9253,16 @@
         }
       }
     },
+    "作者: %@ | 播放量: %@" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "作者: %1$@ | 播放量: %2$@"
+          }
+        }
+      }
+    },
     "你要存储当前的草稿吗？" : {
       "localizations" : {
         "en" : {
@@ -10236,6 +10249,7 @@
       }
     },
     "手记建议" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
